Fix compatibility types of bannedUsers and previousMessages attributes